corrected footer alignment

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -4,9 +4,10 @@ body{
 }
 
 footer {
-  font-size: 1.5em;
+  font-size: 1.2em;
   margin: 2%;
   margin-top: 5%;
+  margin-left: 5%;
 
   img {
     width: 5%;
@@ -19,6 +20,7 @@ footer {
 // desktop
 @media (min-width: 801px) {
   footer {
+    font-size: 1.5em;
     img {
       width: 3%;
       height: 3%;
