--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -24,7 +24,7 @@ a {
     position: relative;
     max-width: 100%;
     max-height: 100%;
-    margin-left: -9%;
+    margin-left: -8%;
     margin-top: -20%;
     margin-bottom: -35%;
     z-index: -1;
